# algoriq

./: pyproject.toml
algoriq/: helper.py  hubSpotWork.py  postgreWork.py  testbuisnes.py  textMess.py  workGS.py  workTelegram.py
